--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "chai": "^4.0.2",
     "esdoc": "^0.5.2",
+    "express": "^4.15.3",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
