Fixed travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ install:
   - "npm i serve_me -g"
   - "export TRAVIS=1"
 before_script:
-    - serve_me test/locales 8081
+    - serve_me test/locales 8081 &
 language: node_js
 node_js:
   - "6.11.0"
