--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "rollup": "^0.41.6",
-    "should": "^11.2.1"
+    "should": "^11.2.1",
+    "sinon": "^4.1.2",
+    "sinon-chai": "^2.14.0"
   },
   "scripts": {
     "start": "grunt",
