--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "esdoc": "^0.5.2",
+    "eslint-plugin-json": "^1.3.2",
     "express": "^4.15.3",
     "grunt": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-rollup": "^1.0.1",
+    "gruntify-eslint": "^5.0.0",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "rollup": "^0.41.6",
